--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <plugins>
+        <plugin>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-maven-plugin</artifactId>
+            <version>1.1.3</version>
+        </plugin>
+    </plugins>
+
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
